--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 
 .list__list-item {
     display: flex;
-    width: 240px;
+    max-width: 240px;
     height: 72px;
     background-color: #fff;
     border-radius: 6px;
@@ -53,7 +53,6 @@ body {
     box-sizing: border-box;
     flex-shrink: 0;
     flex-wrap: nowrap;
-    
 }
 
 .list__logo {
