--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@ body {
     background-color: #F8F8F8;
 }
 
+.main {
+    position: relative;
+    overflow: hidden;
+    min-height: 150px;
+}
+
+.swiper-container {
+    position: relative;
+}
+
+.swiper-pagination {
+    --swiper-pagination-bottom: -32px;
+}
+
 .swiper-pagination-bullet {
     width: 12px;
     height: 12px;
@@ -11,19 +25,6 @@ body {
     display: inline-block;
 }
 
-.main {
-    position: relative;
-    overflow: hidden;
-    min-height: 150px;
-}
-
-.swiper-pagination {
-    --swiper-pagination-bottom: -32px;
-}
-
-.swiper-container {
-    position: relative;
-}
 
 
 @font-face {
@@ -73,6 +74,7 @@ body {
     box-sizing: border-box;
     flex-shrink: 0;
     flex-wrap: nowrap;
+    flex-grow:0;
 }
 
 .list__logo {
@@ -98,7 +100,6 @@ body {
     max-height: 52px;
 }
 
-.container {
-    position: relative;
-    overflow: hidden;
+.list__lenovo-logo {
+    max-height: 32px;
 }
