--- a/style.css
+++ b/style.css
@@ -102,3 +102,13 @@ body {
 .list__lenovo-logo {
     max-height: 32px;
 }
+
+.fade {
+    position: absolute;
+    z-index: 1;
+    left: 296px;
+    top: 0;
+    width: 24px;
+    height: 81px;
+    background-image: linear-gradient(to right, rgba(248,248,248,0.01), rgba(248,248,248,1));
+}
